--- a/config.yml
+++ b/config.yml
@@ -45,8 +45,8 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
+    favicon: "/favicon.ico"
+    favicon16x16: "/favicon.ico"
     favicon32x32: "<link / abs url>"
     apple_touch_icon: "<link / abs url>"
     safari_pinned_tab: "<link / abs url>"
