--- a/config.yml
+++ b/config.yml
@@ -144,4 +144,6 @@ outputs:
         - HTML
         - RSS
         - JSON # is necessary
+sitemap:
+  filename: sitemaps.xml
 enableRobotsTXT: false
